removed rounded corners from thumbnails

--- a/templates/index1.html
+++ b/templates/index1.html
@@ -56,7 +56,7 @@
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
             <div class="card-body">
-              <center><img src={{game.thumbnail}} alt={{game.title}} style = "border-radius:5%;" width="310" height="175"></center>
+              <center><img src={{game.thumbnail}} alt={{game.title}} width="310" height="175"></center>
               <p></p>
               <b class="card-text">{{ game.title}}</b>
               <p class="card-text">Price: ${{game.price}}</p>
