--- a/templates/index1.html
+++ b/templates/index1.html
@@ -58,12 +58,12 @@
             <div class="card-body">
               <center><img src={{game.thumbnail}} alt={{game.title}} width="310" height="175"></center>
               <p></p>
-              <b class="card-text">{{ game.title}}</b>
-              <p class="card-text">Price: ${{game.price}}</p>
+              <h5><b class="card-text">{{ game.title}}</b></h5>
+              <b class="card-text">Price: ${{game.price}}</b>
+              <p></p>
               <p class="card-text">Discount: {{game.discount}}%</p>
               <p class="card-text">Intial price: ${{game.initialprice}}</p>
-              <p class="card-text">Store: {{game.store}}</p>	 
-              <p class="card-text"><a href= {{game.link}} target="_blank">Click Here to View on the {{game.store}} Store</a> </p>
+              <center><a class = "btn btn-primary my-2" href= {{game.link}} target="_blank">Purchase Game from {{game.store}}</a> </p></center>
               <div class="d-flex justify-content-between align-items-center">
                 
               </div>
