--- a/templates/index1.html
+++ b/templates/index1.html
@@ -32,7 +32,7 @@
   <body>
 
 <main role="main">
-
+  <a class = "btn btn-primary my-2" style="float: right;" href= "https://find-game-prices-low-data.herokuapp.com/" target="_blank">Click Here to go to Low Data Mode</a> </p>
   <section class="jumbotron text-center">
     <div class="container">
       <h1 class="jumbotron-heading">Search Games across Different Stores</h1>
