--- a/templates/index1.html
+++ b/templates/index1.html
@@ -25,6 +25,9 @@
           font-size: 3.5rem;
         }
       }
+      .align-right {
+        margin-right: 20px;
+      }
     </style>
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static', filename='album.css') }}" rel="stylesheet">
@@ -32,11 +35,13 @@
   <body>
 
 <main role="main">
-  <a class = "btn btn-primary my-2" style="float: right;" href= "https://find-game-prices-low-data.herokuapp.com/" target="_blank">Click Here to go to Low Data Mode</a> </p>
+  <div class="align-right">
+  <a class = "btn btn-primary my-2" style="float: right;" href= "https://find-game-prices-low-data.herokuapp.com/" >Click here to go to Low Data Mode</a> </p>
+  </div>
   <section class="jumbotron text-center">
     <div class="container">
-      <h1 class="jumbotron-heading">Search Games across Different Stores</h1>
-      <p class="lead text-muted">Get the top results for your searched game</p>
+      <h1 class="jumbotron-heading">Search Games Across Different Stores</h1>
+      <p class="lead text-muted">Get the lowest prices for your searched game</p>
       <form method="GET">
       <div class="input-group mb-3">
         <input type="text" name="query" class="form-control">
